GdS Web mobile: Layout issue at modal to register members.

--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -1923,3 +1923,7 @@ p.login-email {
 
 // Large Desktops
 @media screen and (min-width: 1200px) {}
+@media screen and (max-width: 320px) {
+  .span-sex-op{padding-right: 30px !important}
+  button.pull-right.btn.btn-primary.cancel{float: left !important; margin-top: -34px !important;}
+}
